# ECE413_Hex_agent

./: .gitignore  README.md  install.sh  main.py
alpha-zero-general/: MCTS.py  log  main.py
alpha-zero-general/hex/: HexGame.py  HexNNet.py  NNet.py  hex.py
mcts/: Cargo.toml
mcts/mcts-lib/: Cargo.toml
mcts/mcts-lib/src/: hex.rs  lib.rs  search.rs
mcts/mcts-py/: Cargo.toml
mcts/mcts-py/src/: lib.rs
py/: config.py  evaluate.py  human_play.py  main.py  mcts_py.pyd  net.py  players.py  plot.py  requirements.txt  self_play.py  tournament.py  train.py
runs/5x5_final/: config.json  eval-0.txt  eval-100.txt  eval-500.txt  train_result.npy
runs/5x5_final/models/: 1.pt  10.pt  11.pt  12.pt  13.pt  14.pt  15.pt  16.pt  17.pt  18.pt  19.pt  2.pt  20.pt  21.pt  22.pt  23.pt  24.pt  25.pt  26.pt  27.pt  28.pt  29.pt  3.pt  30.pt  31.pt  32.pt  33.pt  34.pt  35.pt  36.pt  37.pt  38.pt  39.pt  4.pt  40.pt  41.pt  42.pt  43.pt  44.pt  45.pt  (+10 more)
runs/7x7_final/: config.json  eval-0.txt  eval-100.txt  train_result.npy
runs/7x7_final/models/: 1.pt  10.pt  11.pt  12.pt  13.pt  14.pt  15.pt  16.pt  17.pt  18.pt  19.pt  2.pt  20.pt  21.pt  22.pt  23.pt  24.pt  25.pt  26.pt  27.pt  28.pt  29.pt  3.pt  30.pt  31.pt  32.pt  33.pt  34.pt  35.pt  36.pt  37.pt  38.pt  39.pt  4.pt  (+16 more)
runs/7x7_transfer_final/: config.json  eval-0.txt  eval-100.txt  train_result.npy
runs/7x7_transfer_final2/: config.json  train_result.npy
runs/8x8_Raw_final/: config.json  eval-0.txt  eval-100.txt  train_result.npy
runs/8x8_transfer_final/: config.json  eval-0.txt  eval-100.txt  train_result.npy
(+126 files in other folders)
