[package]
name = "mcts-py"
version = "0.1.0"
authors = ["Jonah <jonah@biorender.com>"]
edition = "2018"

[lib]
name = "mcts_py"
crate-type = ["cdylib"]

[dependencies]
mcts-lib = { path = "../mcts-lib" }
rand = "0.8"
ordered-float = "*"
numpy = "0.13"
ndarray = "0.14"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

